[package]
name = "readable-regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.6.0", optional = true }
fancy-regex = { version = "0.10", optional = true}


[features]
default = ["re"]
re = ["regex"]
re-fancy = ["fancy-regex"]