[package]
name = "readable-regex"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.6.0", optional = true }
fancy-regex = { version = "0.10", optional = true }
once_cell = {version = "1.13", optional = true }

[features]
default = ["re"]
re = ["regex"]
re-fancy = ["fancy-regex"]
common = ["once_cell"]